# jt-doc-tools

./: .gitattributes  .gitignore  API.md  AUTH.md  CHANGELOG.md  INSTALL.md  LICENSE  LLM.md  OPS.md  README.md  SECURITY.md  STRESS_TEST.md  TEST_PLAN.md  THIRD-PARTY-NOTICES.md  build-api-page.py  install.ps1  install.sh  pyproject.toml  requirements.txt  reverse_proxy_sso.md  setup-python.cmd
.github/: dependabot.yml
app/: cli.py  config.py  logging_setup.py  main.py  tool_registry.py
docs/: api.html  index.html  style.css
packaging/: README.md  com.jasontools.doctools.plist  jt-doc-tools.service
tests/: conftest.py  test_admin_apis.py  test_admin_picker_css.py  test_api_doc_contract.py  test_asset_image_acl.py  test_asset_thumbnails_resolve.py  test_assets_and_image_utils.py  test_auth_db_migration_v8.py  test_auth_ldap_sync.py  test_auth_local.py  test_auth_middleware.py  test_auth_routes.py  test_auth_settings.py  test_authz_boundaries.py  test_badhost_path_gate.py  test_client_ip_audit.py  test_csp_nonce.py  test_csrf.py  test_db.py  test_directory_sync.py  test_doc_diff.py  test_einvoice_formatters.py  test_einvoice_scan.py  test_host_stats_container.py  test_job_acl.py  test_llm_url_ssrf.py  test_looks_garbled.py  test_nav_visibility_and_whoami.py  test_net_ssl_corp_tls.py  test_ocr_server_gpu_select.py  test_open_redirect.py  test_owasp_top10.py  test_passwords.py  test_path_traversal_audit.py  test_pdf_annotations.py  test_pdf_annotations_flatten.py  test_pdf_annotations_strip.py  test_pdf_compress.py  test_pdf_form_detect.py  test_pdf_ocr_preview_acl.py  (+37 more)
(+343 files in other folders)
